--- a/src/css/style.css
+++ b/src/css/style.css
@@ -112,7 +112,9 @@ body{
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    transform: scale(1.2) translateX();
+    object-fit: cover; 
+    object-position: center; 
+    transform: scale(1.2); 
 }
 
 .home .foto.sombra-interna{
